0.4.0/src/docs/dsl/dev.nokee.platform.base.TaskView.adoc
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
= TaskView
:jbake-type: dsl_chapter
:jbake-tags: user manual, gradle plugin dsl, TaskView
:jbake-description: Learn about the build language of the TaskView type.
:jbake-category: Core types

API Documentation: link:../javadoc/dev/nokee/platform/base/TaskView.html[TaskView]

A view of the tasks that are created and configured as they are required.



== Properties



[cols="1,2", options="header", width=100%]
|===
|Property
|Description


|link:#dev.nokee.platform.base.TaskView:elements[elements]
|The contents of this view as a Provider of <T> instances.



|===




== Methods


[cols="1,2", options="header", width=100%]
|===
|Method
|Description


|`link:#dev.nokee.platform.base.TaskView:withType-java.lang.Class-[withType](type)`
|Returns a task view containing the objects in this view of the given type.
The returned view is live, so that when matching objects are later added to this view, they are also visible in the filtered task view.

|`link:#dev.nokee.platform.base.View:configureEach-org.gradle.api.specs.Spec-org.gradle.api.Action-[configureEach](spec, action)`
|Registers an action to execute to configure each element in the view matching the given specification.
The action is only executed for those elements that are required.
Fails if any element has already been finalized.

|`link:#dev.nokee.platform.base.View:configureEach-org.gradle.api.Action-[configureEach](action)`
|Registers an action to execute to configure each element in the view.
The action is only executed for those elements that are required.
Fails if any element has already been finalized.

|`link:#dev.nokee.platform.base.View:configureEach-java.lang.Class-org.gradle.api.Action-[configureEach](type, action)`
|Registers an action to execute to configure each element in the view.
The action is only executed for those elements that are required.
Fails if any matching element has already been finalized.

This method is equivalent to view.withType(Foo).configureEach { ... }.

|`link:#dev.nokee.platform.base.View:get--[get]()`
|Returns the contents of this view as a Set of <T> instances.

|`link:#dev.nokee.platform.base.View:map-org.gradle.api.Transformer-[map](mapper)`
|Returns a list containing the results of applying the given mapper function to each element in the view.



|`link:#dev.nokee.platform.base.View:flatMap-org.gradle.api.Transformer-[flatMap](mapper)`
|Returns a single list containing all elements yielded from results of mapper function being invoked on each element of this view.



|`link:#dev.nokee.platform.base.View:filter-org.gradle.api.specs.Spec-[filter](spec)`
|Returns a single list containing all elements matching the given specification.



|===





== Property Details


[[dev.nokee.platform.base.TaskView:elements]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<link:https://docs.oracle.com/javase/8/docs/api/java/util/Set.html[Set]<? extends T>> elements (read-only)

The contents of this view as a link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider] of `<T>` instances.



The returned link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider] is live, and tracks changes of the view.








== Method Details


[[dev.nokee.platform.base.TaskView:withType-java.lang.Class-]]
=== link:../javadoc/dev/nokee/platform/base/TaskView.html[TaskView]<S> withType(link:https://docs.oracle.com/javase/8/docs/api/java/lang/Class.html[Class]<S> type)

Returns a task view containing the objects in this view of the given type.
The returned view is live, so that when matching objects are later added to this view, they are also visible in the filtered task view.



[[dev.nokee.platform.base.View:configureEach-org.gradle.api.specs.Spec-org.gradle.api.Action-]]
=== void configureEach(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/specs/Spec.html[Spec]<? super T> spec, link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Action.html[Action]<? super T> action)

Registers an action to execute to configure each element in the view matching the given specification.
The action is only executed for those elements that are required.
Fails if any element has already been finalized.



[[dev.nokee.platform.base.View:configureEach-org.gradle.api.Action-]]
=== void configureEach(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Action.html[Action]<? super T> action)

Registers an action to execute to configure each element in the view.
The action is only executed for those elements that are required.
Fails if any element has already been finalized.



[[dev.nokee.platform.base.View:configureEach-java.lang.Class-org.gradle.api.Action-]]
=== void configureEach(link:https://docs.oracle.com/javase/8/docs/api/java/lang/Class.html[Class]<S> type, link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Action.html[Action]<? super S> action)

Registers an action to execute to configure each element in the view.
The action is only executed for those elements that are required.
Fails if any matching element has already been finalized.

This method is equivalent to `view.withType(Foo).configureEach { ... }`.



[[dev.nokee.platform.base.View:get--]]
=== link:https://docs.oracle.com/javase/8/docs/api/java/util/Set.html[Set]<? extends T> get()

Returns the contents of this view as a link:https://docs.oracle.com/javase/8/docs/api/java/util/Set.html[Set] of `<T>` instances.



[[dev.nokee.platform.base.View:map-org.gradle.api.Transformer-]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<link:https://docs.oracle.com/javase/8/docs/api/java/util/List.html[List]<? extends S>> map(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Transformer.html[Transformer]<? extends S, ? super T> mapper)

Returns a list containing the results of applying the given mapper function to each element in the view.



The returned link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider] is live, and tracks changes of the view.



[[dev.nokee.platform.base.View:flatMap-org.gradle.api.Transformer-]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<link:https://docs.oracle.com/javase/8/docs/api/java/util/List.html[List]<? extends S>> flatMap(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Transformer.html[Transformer]<link:https://docs.oracle.com/javase/8/docs/api/java/lang/Iterable.html[Iterable]<? extends S>, ? super T> mapper)

Returns a single list containing all elements yielded from results of mapper function being invoked on each element of this view.



The returned link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider] is live, and tracks changes of the view.



[[dev.nokee.platform.base.View:filter-org.gradle.api.specs.Spec-]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider]<link:https://docs.oracle.com/javase/8/docs/api/java/util/List.html[List]<? extends T>> filter(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/specs/Spec.html[Spec]<? super T> spec)

Returns a single list containing all elements matching the given specification.



The returned link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Provider.html[Provider] is live, and tracks changes of the view.






